# mr-cd-projekt-red

./: .gitignore  Cargo.toml  users.db
src/: error.rs  handler.rs  main.rs
src/audio/: buffer.rs  buffer_manager.rs  discord_audio_packet.rs  mod.rs  receiver.rs  track.rs
src/commands/: about.rs  db_test.rs  help.rs  helpers.rs  mod.rs  ping.rs  quit.rs
src/commands/admin/: mod.rs  shadow_realm.rs
src/commands/voice/: join.rs  leave.rs  mod.rs  play.rs  save.rs
src/db/: mod.rs  sqlite.rs
src/db/redis/: mod.rs  structs.rs
src/model/: user.rs
web/: Cargo.toml
web/client/: package-lock.json  package.json  rollup.config.js
web/client/src/: App.svelte  routing.ts
web/client/src/layout/: Navbar.svelte
web/client/src/routes/: 404.svelte  Dashboard.svelte  Plugins.svelte  Settings.svelte
web/src/: main.rs
