[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Justin Miller <superiorjt@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
config = "0.10.1"
serde = { version = "1.0.110", features = ["derive"] }
kankyo = "~0.3"
typemap = "0.3"
hound = "3.4.0"
r2d2 = "0.8.8"
r2d2_sqlite = "0.16.0"

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "voice",
]