[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Justin Miller <superiorjt@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
config = "0.10.1"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0"
kankyo = "~0.3"
typemap = "0.3"
hound = "3.4.0"
r2d2 = "0.8.8"
r2d2_sqlite = "0.16.0"

[dependencies.tokio]
version = "0.2"
features = ["macros"]

# [dependencies.audiopus_sys]
# git = "https://github.com/Lakelezz/audiopus_sys.git"
# branch = "add-cross-compile-support"

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled"]

[dependencies.redis]
version = "0.17.0"
features = ["tokio-comp"]

[dependencies.serenity]
version = "0.9.0-rc.2"
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "voice",
    "rustls_backend"
]

[dependencies.chrono]
features = ["serde"]
version = "0.4"