[package]
name = "discord-bot-web"
version = "0.1.0"
authors = ["Justin Miller <superiorjt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rocket]
version = "0.4.5"
features = []

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "serve"]